--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^0.5.8
   custom_switch: ^0.0.1
   flutter_launcher_icons: ^0.7.5
+  call_log: ^2.1.0
+  permission_handler: ^5.0.1+1
 
 
   cupertino_icons: ^0.1.3
